--- a/Uqbar.Services.Interfaces/Uqbar.Services.Framework.csproj
+++ b/Uqbar.Services.Interfaces/Uqbar.Services.Framework.csproj
@@ -30,11 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.6\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -53,6 +57,8 @@
     <Compile Include="Mensagens\IMessagemProvider.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="OCR\GOCR.cs" />
+    <Compile Include="Providers\IProvider.cs" />
+    <Compile Include="Providers\Web.cs" />
     <Compile Include="ServicoInfo.cs" />
     <Compile Include="Timers.cs" />
     <Compile Include="WCF\IService.cs" />
@@ -69,6 +75,7 @@
     <None Include="OCR\Executables\gocr049.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OCR\Executables\ocr.bat">
