--- a/WindowsServices/Uqbar.Services.WinSrv.CVM/Uqbar.Services.WinSrv.CVM.csproj
+++ b/WindowsServices/Uqbar.Services.WinSrv.CVM/Uqbar.Services.WinSrv.CVM.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ModulesService.Designer.cs">
       <DependentUpon>ModulesService.cs</DependentUpon>
     </Compile>
+    <Compile Include="Output\XML.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -73,9 +74,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Providers\File.cs" />
-    <Compile Include="Providers\IProvider.cs" />
-    <Compile Include="Providers\Web.cs" />
     <Compile Include="Scrappers\FIIDadosCadastrais.cs" />
     <Compile Include="Scrappers\FIIDemonstraçõesFinanceiras.cs" />
     <Compile Include="Scrappers\IScrapper.cs" />
